configure matrix of signature sites to verify first phase work

--- a/hubert_h_harrison/properties.yml
+++ b/hubert_h_harrison/properties.yml
@@ -4,7 +4,7 @@ title: Hubert H. Harrison papers
 repository_id: NNC-RB
 search_type: catalog
 layout: signature
-palette: monochromeLight
+palette: blue
 image_uris: 
 - info:fedora/cul:5hqbzkh2w9
 constraints:
