--- a/jay/properties.yml
+++ b/jay/properties.yml
@@ -3,7 +3,7 @@ publisher_uri: info:fedora/cul:80gb5mkm8v
 title: The Papers of John Jay
 search_type: local
 layout: signature
-palette: parchment
+palette: blue
 constraints:
   publisher:
     - info:fedora/cul:80gb5mkm8v
