add search_type configurations for phase II testing

--- a/art_properties/properties.yml
+++ b/art_properties/properties.yml
@@ -18,7 +18,7 @@ image_uris:
 repository_id: NyNyCAP
 layout: portrait
 palette: blue
-search_type: catalog
+search_type: local
 restricted: false
 constraints: !ruby/hash:ActiveSupport::HashWithIndifferentAccess
   project:
