--- a/hubert_h_harrison/properties.yml
+++ b/hubert_h_harrison/properties.yml
@@ -2,7 +2,7 @@ slug: hubert_h_harrison
 publisher_uri: info:fedora/cul:3xsj3txbtq
 title: Hubert H. Harrison papers
 repository_id: NNC-RB
-search_type: catalog
+search_type: local
 layout: signature
 palette: blue
 image_uris: 
