--- a/jay/properties.yml
+++ b/jay/properties.yml
@@ -1,7 +1,7 @@
 slug: jay
 publisher_uri: info:fedora/cul:80gb5mkm8v
 title: The Papers of John Jay
-search_type: local
+search_type: custom
 layout: signature
 palette: blue
 constraints:
