phase I deploy configurations

--- a/art_properties/properties.yml
+++ b/art_properties/properties.yml
@@ -20,6 +20,7 @@ layout: portrait
 palette: blue
 search_type: catalog
 restricted: false
+show_facets: false
 constraints: !ruby/hash:ActiveSupport::HashWithIndifferentAccess
   project:
   - Art Properties -- Columbia’s Art Collection Online
