migrate show_facets config from page properties to site properties

--- a/art_properties/properties.yml
+++ b/art_properties/properties.yml
@@ -19,6 +19,7 @@ repository_id: NyNyCAP
 layout: portrait
 palette: blue
 search_type: local
+show_facets: false
 restricted: false
 constraints: !ruby/hash:ActiveSupport::HashWithIndifferentAccess
   project:
