--- a/jay/properties.yml
+++ b/jay/properties.yml
@@ -2,6 +2,7 @@ slug: jay
 publisher_uri: info:fedora/cul:80gb5mkm8v
 title: The Papers of John Jay
 search_type: custom
+show_facets: true
 layout: signature
 palette: blue
 constraints:
