--- a/russian_sheet_music/properties.yml
+++ b/russian_sheet_music/properties.yml
@@ -9,6 +9,7 @@ repository_id:
 layout: gallery
 palette: monochromeDark
 search_type: local
+show_facets: false
 restricted: false
 constraints: !ruby/hash:ActiveSupport::HashWithIndifferentAccess
   project:
