--- a/tibetan_collection/properties.yml
+++ b/tibetan_collection/properties.yml
@@ -9,6 +9,7 @@ repository_id:
 layout: portrait
 palette: monochromeDark
 search_type: local
+show_facets: false
 restricted: false
 constraints: !ruby/hash:ActiveSupport::HashWithIndifferentAccess
   project:
