Add persistent_url to jay data export

--- a/jay/properties.yml
+++ b/jay/properties.yml
@@ -1,5 +1,6 @@
 slug: jay
 publisher_uri: info:fedora/cul:80gb5mkm8v
+persistent_url: http://www.columbia.edu/cgi-bin/cul/resolve?AVE8231
 title: The Papers of John Jay
 search_type: custom
 layout: signature
